Store WorkItems for Teams in Database instead of relying on queries for every action
Refactored multiple test classes to improve readability and maintainability, including adding new test methods and removing obsolete ones. Introduced a new `TeamMetricsService` for handling team metrics and updated related services to use this new service. Updated `ForecastUpdateService` and `TeamUpdateService` to leverage the new metrics service. Refactored `WorkItemUpdateService` to improve feature and work item handling.

Significant changes to `AzureDevOpsWorkItemService` and `JiraWorkItemService` to enhance performance and readability. Updated `IWorkItemService` interface and added new utility methods.

Introduced new migrations to modify the database schema, including adding `EstimatedSize` and `OwningTeam` columns to the `Features` table and removing `FeaturesInProgress` and `RawThroughput` columns from the `Teams` table. Updated model snapshots to reflect these changes.

--- a/Lighthouse.Backend/.editorconfig
+++ b/Lighthouse.Backend/.editorconfig
@@ -113,3 +113,6 @@ end_of_line = crlf
 
 # IDE0074: Use compound assignment
 dotnet_diagnostic.IDE0074.severity = none
+
+# IDE0305: Simplify collection initialization
+dotnet_diagnostic.IDE0305.severity = none
