config: add PostgreSQL database configuration to development settings

--- a/Lighthouse.Backend/Lighthouse.Backend/appsettings.Development.json
+++ b/Lighthouse.Backend/Lighthouse.Backend/appsettings.Development.json
@@ -20,6 +20,10 @@
       }
     ]
   },
+  "Database_Postgres": {
+    "Provider": "postgres",
+    "ConnectionString": "Host=localhost;Port=5432;Database=lighthouse;Username=postgres;Password=postgres"
+  },
   "Kestrel": {
     "Endpoints": {
       "Http": {
