--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -29,6 +29,7 @@
     "lodash.debounce": "^4.0.8",
     "lorem-ipsum": "^2.0.8",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
@@ -43,6 +44,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.1.1",
