Finalize MCP Server Integration

--- a/Lighthouse.Backend/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/Lighthouse.Backend/appsettings.json
@@ -7,7 +7,8 @@
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.EntityFrameworkCore": "Warning",
         "Microsoft.AspNetCore.Routing": "Warning",
-        "Microsoft.AspNetCore.Hosting": "Warning"
+        "Microsoft.AspNetCore.Hosting": "Warning",
+        "ModelContextProtocol": "Warning"
       }
     },
     "WriteTo": [
