--- a/Lighthouse.Backend/Lighthouse.Backend/Lighthouse.Backend.csproj
+++ b/Lighthouse.Backend/Lighthouse.Backend/Lighthouse.Backend.csproj
@@ -24,6 +24,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="GraphQL.Client" Version="6.1.0" />
+		<PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="6.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="9.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
@@ -35,6 +37,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
 		<PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.1.0-preview.8" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
 		<PackageReference Include="Octokit" Version="14.0.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
