Adjust storage of RankFieldOverride & add documentation

--- a/Lighthouse.Backend/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/Lighthouse.Backend/appsettings.json
@@ -56,7 +56,9 @@
       }
     }
   },
-  "Jira": {
-    "RankFieldOverride": "customfield_10019"
+  "WorkTrackingSystems": {
+    "Jira": {
+      "RankFieldOverride": ""
+    }
   }
 }
