Make sure feature toggle change is saved before continuing in e2e test

--- a/Lighthouse.Backend/Lighthouse.Backend/appsettings.Development.json
+++ b/Lighthouse.Backend/Lighthouse.Backend/appsettings.Development.json
@@ -22,7 +22,8 @@
   },
   "Database_Postgres": {
     "Provider": "postgres",
-    "ConnectionString": "Host=localhost;Port=5432;Database=lighthouse;Username=postgres;Password=postgres"
+    "ConnectionString": "Host=localhost;Port=1886;Database=lighthouse;Username=postgres;Password=postgres",
+    "DockerCommand": "docker run --name postgres -e POSTGRES_DB=lighthouse -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -p 1886:5432 -d postgres:17.2-alpine"
   },
   "Kestrel": {
     "Endpoints": {
