--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -25,6 +25,7 @@
     "@mui/x-charts": "^8.2.0",
     "@mui/x-date-pickers": "^8.2.0",
     "axios": "^1.9.0",
+    "class-transformer": "^0.5.1",
     "dayjs": "^1.11.13",
     "lodash.debounce": "^4.0.8",
     "lorem-ipsum": "^2.0.8",
@@ -32,6 +33,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
+    "reflect-metadata": "^0.2.2",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
