--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -25,6 +25,7 @@
     "@mui/x-charts": "^8.5.0",
     "@mui/x-date-pickers": "^8.5.0",
     "axios": "^1.9.0",
+    "camelcase-keys": "^9.1.3",
     "class-transformer": "^0.5.1",
     "dayjs": "^1.11.13",
     "lodash.debounce": "^4.0.8",
