Add documentation for Import/Export of Configuration
- Include new E2E test that verifies functionality

--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,4 @@ Lighthouse.Frontend/coverage/*
 examples/postgres/data/*
 !/examples/postgres/certs/LighthouseCert.pfx
 .DS_Store
+Lighthouse.EndToEndTests/temp-downloads/*
