Try to improve readability/contrasts
Rework visuals, trying to make texts more readable, according to WCAG guidelines

--- a/Lighthouse.Frontend/tsconfig.node.json
+++ b/Lighthouse.Frontend/tsconfig.node.json
@@ -11,5 +11,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/utils/config.ts"]
 }
