fix(dependabot): specify directory for .NET NuGet dependencies in Lighthouse.Backend

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
 
   # Update .NET NuGet dependencies in the C# projects
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: "/Lighthouse.Backend"
     schedule:
       interval: "daily"
     commit-message:
