--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.9.0",
     "@mui/x-date-pickers": "^8.9.0",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "camelcase-keys": "^9.1.3",
     "class-transformer": "^0.5.1",
