Add requests library to dependencies and clean up send_license_email script

--- a/.github/workflows/generate-license.yml
+++ b/.github/workflows/generate-license.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cryptography
+          pip install cryptography requests
 
       - name: Write private key to file
         run: echo "${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}" > private_key.pem
