Refactor email sending to use Mailgun SMTP and update dependencies

--- a/.github/workflows/generate-license.yml
+++ b/.github/workflows/generate-license.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cryptography requests
+          pip install cryptography
 
       - name: Write private key to file
         run: echo "${{ secrets.LIGHTHOUSE_LICENSE_PRIVATE_KEY }}" > private_key.pem
@@ -56,7 +56,8 @@ jobs:
       - name: Send license via email
         run: python Scripts/send_license_email.py
         env:
-          MAILGUN_API_KEY: ${{ secrets.MAILGUN_API_KEY }}
+          MAILGUN_SMTP_USERNAME: ${{ secrets.MAILGUN_SMTP_USERNAME }}
+          MAILGUN_SMTP_PASSWORD: ${{ secrets.MAILGUN_SMTP_PASSWORD }}
           RECIPIENT_NAME: ${{ github.event.inputs.name }}
           RECIPIENT_EMAIL: ${{ github.event.inputs.email }}
           ORGANIZATION: ${{ github.event.inputs.organization }}
