--- a/Lighthouse.Backend/Lighthouse.Backend/Lighthouse.Backend.csproj
+++ b/Lighthouse.Backend/Lighthouse.Backend/Lighthouse.Backend.csproj
@@ -22,6 +22,7 @@
 
 	<ItemGroup>
 	  <None Remove="certs\LighthouseDefaultCert.pfx" />
+	  <None Remove="Services\Implementation\Licensing\public_key.pem" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -62,6 +63,11 @@
 
 	<ItemGroup>
 	  <Content Include="favicon.ico" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Services\Implementation\Licensing\public_key.pem" />
 	</ItemGroup>
 
 
