--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -19,15 +19,16 @@
     "@emotion/styled": "^11.14.1",
     "@melloware/react-logviewer": "^6.3.2",
     "@microsoft/signalr": "^9.0.6",
-    "@mui/material": "^7.3.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.0",
     "@mui/x-charts": "^8.10.0",
     "@mui/x-date-pickers": "^8.10.0",
     "@tanstack/react-query": "^5.85.0",
     "axios": "^1.11.0",
     "camelcase-keys": "^9.1.3",
     "class-transformer": "^0.5.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lodash.debounce": "^4.0.8",
     "lorem-ipsum": "^2.0.8",
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/date-fns": "^2.5.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
