--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -106,6 +106,11 @@ jobs:
           rm -rf ./Lighthouse
         shell: bash
 
+      - name: Delete license and private key files
+        run: |
+          rm -f license.json private_key.pem
+        shell: bash
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
