fix: update Dockerfile to use Node 24-alpine and adjust multi-platform support in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -455,7 +455,7 @@ jobs:
           VERSION=${{ needs.tag.outputs.fileversion }}
 
           # Define platforms you want to support
-          PLATFORMS="linux/amd64,linux/arm64,linux/arm"
+          PLATFORMS="linux/amd64,linux/arm64"
 
           # Build and push the multi-platform image
           docker buildx build --platform $PLATFORMS --no-cache \
