deps: add "node" type to tsconfig for improved type definitions

--- a/Lighthouse.Frontend/tsconfig.app.json
+++ b/Lighthouse.Frontend/tsconfig.app.json
@@ -10,7 +10,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "types":[
-      "vitest/globals"
+      "vitest/globals",
+      "node"
     ],
 
     /* Bundler mode */
